--- a/templates/base.html
+++ b/templates/base.html
@@ -170,23 +170,143 @@
     </header>
 
     <!-- Navigation -->
-    <nav>
-        <div class="container nav-container">
+    <nav class="main-nav" x-data="{ openMenu: null }">
+        <div class="nav-wrapper">
             <button class="mobile-menu-btn" x-data @click="$dispatch('open-mobile-menu')" aria-label="Open menu">
                 <i class="fas fa-bars"></i>
+                <span class="ml-2">Menu</span>
             </button>
 
             <ul class="nav-links">
-                <li><a href="/" class="active"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/tournament"><i class="fas fa-trophy"></i> Tournament</a></li>
-                <li><a href="/worldcup-2026-info"><i class="fas fa-info-circle"></i> World Cup Info</a></li>
-                <li><a href="#"><i class="fas fa-map-marker-alt"></i> Destination</a></li>
-                <li><a href="#"><i class="fas fa-gamepad"></i> Fun & Games</a></li>
-                <li><a href="#"><i class="fas fa-building"></i> Organisation</a></li>
-                <li><a href="#"><i class="fas fa-history"></i> Classic Football</a></li>
-                <li><a href="#"><i class="fas fa-mobile-alt"></i> Mobile</a></li>
-                <li><a href="#"><i class="fas fa-video"></i> Video</a></li>
+                <li><a href="/" class="nav-link"><i class="fas fa-home"></i> <span>Home</span></a></li>
+                
+                <!-- Tournament Mega Menu -->
+                <li class="nav-item-mega" @mouseenter="openMenu = 'tournament'" @mouseleave="openMenu = null">
+                    <a href="/tournament" class="nav-link">
+                        <i class="fas fa-trophy"></i> <span>Tournament</span> <i class="fas fa-chevron-down text-xs ml-1"></i>
+                    </a>
+                </li>
+
+                <!-- Info Mega Menu -->
+                <li class="nav-item-mega" @mouseenter="openMenu = 'info'" @mouseleave="openMenu = null">
+                    <a href="/worldcup-2026-info" class="nav-link">
+                        <i class="fas fa-info-circle"></i> <span>World Cup Info</span> <i class="fas fa-chevron-down text-xs ml-1"></i>
+                    </a>
+                </li>
+
+                <!-- Media Mega Menu -->
+                <li class="nav-item-mega" @mouseenter="openMenu = 'media'" @mouseleave="openMenu = null">
+                    <a href="#" class="nav-link">
+                        <i class="fas fa-photo-video"></i> <span>Media</span> <i class="fas fa-chevron-down text-xs ml-1"></i>
+                    </a>
+                </li>
+
+                <li><a href="#" class="nav-link"><i class="fas fa-history"></i> <span>Classic Football</span></a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-gamepad"></i> <span>Fun & Games</span></a></li>
+                <li><a href="#" class="nav-link"><i class="fas fa-building"></i> <span>Organisation</span></a></li>
             </ul>
+        </div>
+
+        <!-- Tournament Mega Menu Content -->
+        <div class="mega-menu" x-show="openMenu === 'tournament'" x-cloak x-transition 
+             @mouseenter="openMenu = 'tournament'" @mouseleave="openMenu = null">
+            <div class="mega-menu-content">
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-trophy"></i> Tournament</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="/tournament"><i class="fas fa-futbol"></i> Overview</a></li>
+                        <li><a href="#"><i class="fas fa-users"></i> Teams</a></li>
+                        <li><a href="#"><i class="fas fa-layer-group"></i> Groups</a></li>
+                        <li><a href="#"><i class="fas fa-calendar-alt"></i> Schedule</a></li>
+                        <li><a href="#"><i class="fas fa-medal"></i> Standings</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-chart-line"></i> Statistics</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-chart-bar"></i> Team Stats</a></li>
+                        <li><a href="#"><i class="fas fa-user-chart"></i> Player Stats</a></li>
+                        <li><a href="#"><i class="fas fa-fire"></i> Top Scorers</a></li>
+                        <li><a href="#"><i class="fas fa-hands-helping"></i> Assists</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-running"></i> Players</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-star"></i> All Players</a></li>
+                        <li><a href="#"><i class="fas fa-crown"></i> Star Players</a></li>
+                        <li><a href="#"><i class="fas fa-user-plus"></i> Young Talents</a></li>
+                        <li><a href="#"><i class="fas fa-shield-alt"></i> Goalkeepers</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Info Mega Menu Content -->
+        <div class="mega-menu" x-show="openMenu === 'info'" x-cloak x-transition 
+             @mouseenter="openMenu = 'info'" @mouseleave="openMenu = null">
+            <div class="mega-menu-content">
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-info-circle"></i> About</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="/worldcup-2026-info"><i class="fas fa-file-alt"></i> Overview</a></li>
+                        <li><a href="#"><i class="fas fa-expand-arrows-alt"></i> Format</a></li>
+                        <li><a href="#"><i class="fas fa-palette"></i> Branding</a></li>
+                        <li><a href="#"><i class="fas fa-paw"></i> Mascots</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-map-marker-alt"></i> Venues</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-city"></i> Host Cities</a></li>
+                        <li><a href="#"><i class="fas fa-stadium"></i> Stadiums</a></li>
+                        <li><a href="#"><i class="fas fa-map"></i> Map</a></li>
+                        <li><a href="#"><i class="fas fa-plane"></i> Travel Info</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-ticket-alt"></i> Tickets</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-shopping-cart"></i> Buy Tickets</a></li>
+                        <li><a href="#"><i class="fas fa-hotel"></i> Hospitality</a></li>
+                        <li><a href="#"><i class="fas fa-info"></i> Ticket Info</a></li>
+                        <li><a href="#"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Media Mega Menu Content -->
+        <div class="mega-menu" x-show="openMenu === 'media'" x-cloak x-transition 
+             @mouseenter="openMenu = 'media'" @mouseleave="openMenu = null">
+            <div class="mega-menu-content">
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-video"></i> Videos</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-play-circle"></i> Highlights</a></li>
+                        <li><a href="#"><i class="fas fa-film"></i> Full Matches</a></li>
+                        <li><a href="#"><i class="fas fa-microphone"></i> Interviews</a></li>
+                        <li><a href="#"><i class="fas fa-camera"></i> Behind Scenes</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-newspaper"></i> News</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-rss"></i> Latest News</a></li>
+                        <li><a href="#"><i class="fas fa-file-alt"></i> Articles</a></li>
+                        <li><a href="#"><i class="fas fa-comments"></i> Interviews</a></li>
+                        <li><a href="#"><i class="fas fa-bullhorn"></i> Press</a></li>
+                    </ul>
+                </div>
+                <div class="mega-menu-column">
+                    <h4 class="mega-menu-title"><i class="fas fa-images"></i> Gallery</h4>
+                    <ul class="mega-menu-list">
+                        <li><a href="#"><i class="fas fa-camera-retro"></i> Photos</a></li>
+                        <li><a href="#"><i class="fas fa-image"></i> Wallpapers</a></li>
+                        <li><a href="#"><i class="fas fa-download"></i> Downloads</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
